# bldc-controller

./: .bazelrc  .gitignore  .gitmodules  BUILD  Makefile  README.md  WORKSPACE  platforms.bzl  pyproject.toml  requirements.txt  setup.py
.github/workflows/: compile.yaml  cpplint.yaml  tests.yaml
BasicCubeMXProject/: .mxproject  Code.ioc  Makefile
BasicCubeMXProject/Inc/: stm32f4xx_hal_conf.h
BasicCubeMXProject/Src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
bd_tools/: .gitignore  README.md  __init__.py  __main__.py  boards.py  calibrate_encoder.py  calibrate_servo.py  comms.py  control_motor.py  livegraph.py  pyproject.toml  read_sensor.py  setup.py  update_calibration.py  upload_bootloader.py  upload_calibration.py  upload_firmware.py  utils.py  view_control_loop.py
bd_tools/dev/: __init__.py  calibrate_link.py  calibrate_servo.py  characterize.py  crash_device.py  download_calibration.py  frequency.py  gen_gamma_table.py  gripper_test.py  lift_test.py  modulator_anim.py  position_control.py  test_rs485.py
bd_tools/recorder/: log.py  log_6phase.py  log_foc.py  log_ramp.py  log_static.py  plot.py  plot_logs.py
bd_tools/src/bd_tools/: __init__.py  __main__.py  boards.py  comms.py  utils.py
bd_tools/src/bd_tools/dev/: crash_device.py  gen_gamma_table.py  gripper_test.py  openocd.cfg
bd_tools/src/bd_tools/recorder/: .gitignore  log_foc.py  plot_logs.py
bd_tools/udev_latency/: low_latency.sh
bootloader/: BUILD  BUILD.bazel  CPPLINT.cfg  Makefile  STM32F405xG.ld  link.ld  openocd.cfg
bootloader/include/: bl_comms.h  chconf.h  flash.h  halconf.h  helper.h  mcuconf.h  peripherals.h  peripherals.hpp  stm32f4xx_conf.h
bootloader/src/: bl_comms.cpp  main.cpp  peripherals.cpp
common/: BUILD  BUILD.bazel  CPPLINT.cfg  board.c  board.h  board.mk  common.mk
common/cfg/: board.chcfg
common/include/: buffer.h  comms.h  comms.hpp  comms_defs.h  comms_defs.hpp  constants.h  constants.hpp  crc16.h  flash.h  helper.h  hw_conf.h  utils.h
common/src/: buffer.cpp  comms.cpp  constants.cpp  crc16.c  flash.c  helper.c  utils.c
docs/: disco_bus.md  protocol_v1.txt  protocol_v2.md  protocol_v3.md
drivers/accel/: BUILD.bazel  iis328dq.cpp  iis328dq.hpp
drivers/encoder/: BUILD.bazel  aeat6600.cpp  aeat6600.h  as5047d.cpp  as5047d.hpp  mlx90363.cpp  mlx90363.h
drivers/gate_driver/: BUILD.bazel  drv8312.cpp  drv8312.hpp
drivers/imu/: CPPLINT.cfg  lsm6ds3.cpp  lsm6ds3_ll_driver.c  lsm6ds3_ll_driver.h
drivers/temperature/: BUILD.bazel  lm75b.cpp  lm75b.h  mcp9808.cpp  mcp9808.hpp
electrical_test/: .gitignore  Makefile  electrical_test.ioc
electrical_test/Inc/: stm32f4xx_hal_conf.h
electrical_test/Src/: main.c  stm32f4xx_hal_msp.c
firmware/: .gitignore  BUILD  BUILD.bazel  CPPLINT.cfg  Makefile  STM32F405xG.ld  board.mk  gdbinit.txt  link.ld  openocd.cfg  openocd_gdb.cfg  openocd_pipe.sh  run_gdb.sh
firmware/include/: AEAT6600.h  AS5047D.h  AS5047D.hpp  DRV8301.h  DRV8312.h  DRV8312.hpp  IIS328DQ.h  IIS328DQ.hpp  LM75B.h  LSM6DS3Sensor.h  LSM6DS3_ACC_GYRO_driver.h  LUTFunction.h  LUTFunction.hpp  MCP9808.h  MCP9808.hpp  MLX90363.h  PID.h  Recorder.h  Recorder.hpp  SVM.h  SVM.hpp  chconf.h  comms.h  comms_defs.h  constants.h  control.h  control.hpp  crc_mlx.h  fast_math.h  fast_math.hpp  firmware_peripherals.hpp  fw_comms.h  halconf.h  mcuconf.h  peripherals.h  peripherals.hpp  pid.h  pid.hpp  state.h  state.hpp  (+4 more)
firmware/include/old_drivers/: AEAT6600.h  DRV8301.h  LM75B.h  LSM6DS3Sensor.h  shell.h  usbcfg.h
firmware/proto/: BUILD.bazel  messages.proto
firmware/src/: AEAT6600.cpp  AS5047D.cpp  DRV8301.cpp  DRV8312.cpp  IIS328DQ.cpp  LM75B.cpp  LSM6DS3Sensor.cpp  LUTFunction.cpp  MCP9808.cpp  MLX90363.cpp  PID.cpp  Recorder.cpp  SVM.cpp  comms.cpp  control.cpp  crc_mlx.c  fast_math.cpp  fw_comms.cpp  main.cpp  peripherals.cpp  pid.cpp  state.cpp  transforms.cpp
firmware/src/old_drivers/: AEAT6600.cpp  DRV8301.cpp  LSM6DS3Sensor.cpp  LSM6DS3_ACC_GYRO_driver.c  shell.c  usbcfg.c
hardware/: .gitignore  bldc-controller.kicad_pcb  bldc-controller.lib  bldc-controller.sch  bom_rev_b_ac.xlsx  fp-lib-table  gate_driver_power.sch  half_bridge.sch  imu.sch  rs485.sch  temp_sensor.sch  usb.sch
hardware/bldc-controller.pretty/: 105017-0001.kicad_mod  502585-0470.kicad_mod  502585-0670.kicad_mod  CAPAE1030X1020.kicad_mod  CAPMP6032X280.kicad_mod  CONN-100MIL-M-1x2.kicad_mod  CSS2H-2512.kicad_mod  C_0603_IPC_NOMINAL.kicad_mod  C_1206_IPC_NOMINAL.kicad_mod  DO-214AA.kicad_mod  FREE_VIA_15MIL.kicad_mod  LGA-14L-STRICT.kicad_mod  LQFP-64.kicad_mod  MOUNTING_HOLE_M3.kicad_mod  NET_TIE_8mil.kicad_mod  R-PDSO-G56.kicad_mod  SM05B-GHS-TB.kicad_mod  SM06B-GHS-TB.kicad_mod  SMLP34RGB.kicad_mod  SOIC-8.kicad_mod  SOLDER_HOLE_2.5MM.kicad_mod  SOLDER_PAD.kicad_mod  SOT23-6L.kicad_mod  TSSOP-8.kicad_mod
hardware/rev_b/: bldc-controller.kicad_pcb  bldc-controller.lib  bldc-controller.pro  encoder.sch  gate_driver.sch  half_bridge.sch  ina.sch  mcu.sch  microcontroller.sch
src/: AS5047D.cpp  LUTFunction.cpp  Makefile  board.h  comms.cpp  comms.h  control.cpp  main.cpp  openocd.cfg  peripherals.h  state.cpp  state.h  utils.h
src/cfg/: board.chcfg
toolchains/: debug.bzl  flash.bzl  os_config.bzl  platforms.bzl
toolchains/programs/: BUILD.bazel
tools/: .gitignore  accelerometer.py  apply_torque_while_monitoring_temperature.py  boards.py  calibrate_encoder.py  calibrate_link.py  calibrate_servo.py  calibration.py  calibrations.json  characterize.py  comms.py  control_motor.py  current.py  current_command.py  debug_communications.py  download_calibration.py  drive_constant.py  duty_cycle.py  duty_cycle_v2.py  encoder.py  enumerate.py  frequency.py  gripper_test.py  hand_current.py  imu.py  imu_temp.py  launch.py  lift_test.py  livegraph.py  log.py  modulator_anim.py  multi_read.py  multi_temperature.py  phase_current.py  plot.py  position_control.py  read_sensor.py  ros_bldc.py  sweep.py  temperature.py  (+9 more)
tools/anti_cogging/: friction_detect.py  pos_waveform_collection.py  process_data.py
tools/calibration/: calibrate_encoder.py  calibrate_link.py  calibrate_servo.py  (+1 more)
(+69 files in other folders)
