load("@rules_cc//cc:defs.bzl", "cc_library")
load("//third_party:variables.bzl", "project_inc_paths")

cc_library(
    name = "iis328dq",
    srcs = ["iis328dq.cpp"],
    hdrs = ["iis328dq.hpp"],
    copts = project_inc_paths,
    visibility = ["//visibility:public"],
    deps = [
        "//common",
    ],
    alwayslink = True,
)
